# candle

./: .gitignore  ANALYSIS-LOAD-TIME-2026-04-13.md  BENCH-3WAY-2026-04-11.md  BENCH-3WAY-POST-P2-2026-04-11.md  BENCH-P0-2026-04-11.md  BENCH-P1-2026-04-11.md  BENCH-P1-PHASE-2D-NULL-2026-04-11.md  BENCH-P1-PHASE-2D-V2F-2026-04-11.md  BENCH-P2-FLASH-ATTN-v1-2026-04-11.md  BENCH-P5-2026-04-11.md  BENCH-PMC-VALU-VMEM-2026-04-11.md  BENCH-Q3-FLASH-ATTN-v2-2026-04-11.md  CPU-OVERHEAD-ANALYSIS-2026-04-12.md  Cargo.toml  DOCS-QWEN35-DISPATCH-2026-04-14.md  REVIEW-CANDLE-VS-TURBO-HIP-KERNELS-2026-04-12.md  ROADMAP-CPU-OVERHEAD-2026-04-12.md  ROADMAP-CUDA-ALL-MODELS-2026-04-13.md  ROADMAP-MULTI-MODEL-2026-04-13.md  ROADMAP-OPTIMIZATIONS-FROM-3WAY.md  ROADMAP-ROCM-722-MIGRATION-2026-04-13.md  ROADMAP-ROCM-GFX906.md  SESSION-RESUME.md  SURVEY-GFX906-FORKS-2026-04-13.md
bench/: gemma_2gpu.py  prefill_3way.py  vllm_prefill.py
candle-core/: Cargo.toml
candle-examples/: Cargo.toml
candle-hip-kernels/: Cargo.toml  build.rs
candle-nn/: Cargo.toml
candle-transformers/: Cargo.toml
docs/: AMD-LIBRARY-REFERENCE-2026-04-13.md
hipdarc/: Cargo.toml  build.rs
hipdarc/src/: driver.rs  error.rs  hiprand.rs  lib.rs  rccl.rs  rocblas.rs  sys.rs
scripts/: bench-candle-vs-turbo.sh  bench-hip-graph-replay.sh  bench-models-cuda.sh  check-hip-errors.sh  check-hsaco-format.sh  debug-hipcc-all.sh  debug-hipcc.sh  download-models.sh  gguf-arch.sh  gguf-info.py  gguf-tensors.py  test-gpu-correctness.sh  test-hip-gemma4.sh  test-hip-gpu-ops.sh  test-hip-quantized.sh  test-hip-qwen35.sh  (+10 more)
(+110 files in other folders)
