[package]
name = "hipdarc"
version = "0.1.0"
edition = "2021"
description = "Safe Rust bindings for AMD HIP runtime, rocBLAS, and hiprand"
license = "MIT OR Apache-2.0"

[dependencies]
half = { version = "2.5.0", features = ["num-traits"] }
float8 = { version = "0.7.0", features = ["num-traits"] }
libc = "0.2"
thiserror = "2"

[build-dependencies]
